--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "eslint": "^6.1.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
+    "file-loader": "^4.2.0",
     "node-sass": "^4.12.0",
     "npm-utils": "^2.0.3",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.2.0",
     "style-loader": "^1.0.0",
+    "url-loader": "^2.2.0",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.8.0"
@@ -50,6 +52,7 @@
     "aurelia-pal": "^1.8.2",
     "babel-polyfill": "^6.26.0",
     "bluebird": "^3.5.5",
+    "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "jquery": "^3.4.1",
