--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,7 @@
 {
-  "compilerOptions": { "experimentalDecorators": true },
+  "compilerOptions": { 
+    "experimentalDecorators": true
+  },
   "typeAcquisition": {
     "include": [
       "jest"
