--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "@types/jest": "^24.0.18",
     "aurelia-configuration": "^2.0.0",
+    "aurelia-event-aggregator": "^1.0.3",
     "aurelia-framework": "^1.3.1",
     "aurelia-pal": "^1.8.2",
     "babel-polyfill": "^6.26.0",
